--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
     "require": {
         "php": ">=8.1",
         "monolog/monolog": "^3.0",
+        "symfony/console": "^7.1",
         "symfony/framework-bundle": "^6.4|^7.0",
         "symfony/http-client": "^6.4|^7.0"
     },
