--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
         "monolog/monolog": "^3.0",
         "symfony/console": "^7.1",
         "symfony/framework-bundle": "^6.4|^7.0",
-        "symfony/http-client": "^6.4|^7.0"
+        "symfony/http-client": "^6.4|^7.0",
+        "symfony/stopwatch": "^7.1"
     },
     "config": {
         "preferred-install": "dist",
